# gh-activity-chronicle

./: .gitignore  CONTRIBUTING.md  DESIGN.md  README.md  SAMPLE-ORG.md  SAMPLE.md  gh-activity-chronicle  gh-user-chronicle  pyproject.toml  schema.json
.github/workflows/: ci.yml
research/: find-large-orgs.py  large-orgs.txt
tests/: README.md  __init__.py  api_recorder.py  conftest.py  test_aggregation.py  test_categorization.py  test_cli.py  test_e2e.py  test_helpers.py  test_html.py  test_integration.py  test_rate_limit.py  test_regression.py  test_snapshots.py
tests/fixtures/: README.md
tests/fixtures/golden/: org_report.md  user_report.md
